--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "nodejs",
+  "name": "travis-ci-example",
   "version": "1.0.0",
-  "description": "TesteSoftBox",
-  "main": "index.js",
+  "description": "",
+  "main": "greet-test.js",
   "scripts": {
-    "start": "babel-node index.js",
-    "test": "mocha --opts test/integration/mocha.opts test/integration/*.js"
+    "test": "mocha"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DevLogger/travis-ci-example.git"
+  },
+  "author": "DevLog",
   "license": "ISC",
-  "dependencies": {
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "express": "^4.16.3"
+  "bugs": {
+    "url": "https://github.com/DevLogger/travis-ci-example/issues"
   },
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^5.0.4",
-    "supertest": "^3.0.0"
+  "homepage": "https://github.com/DevLogger/travis-ci-example#readme",
+  "dependencies": {
+    "mocha": "^3.2.0"
   }
 }
