--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "travis-ci-example",
   "version": "1.0.0",
   "description": "",
-  "main": "greet-test.js",
+  "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,10 @@
   "homepage": "https://github.com/DevLogger/travis-ci-example#readme",
   "dependencies": {
     "mocha": "^3.2.0"
+  },
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "express": "^4.16.3"
   }
-}
+
